--- a/src/main/resources/telegramSender.properties
+++ b/src/main/resources/telegramSender.properties
@@ -1,1 +1,1 @@
-telegram.path=/home/tenjin/Dev/IdeaProjects/notification-service/telegram
+message.path=/home/tenjin/Dev/IdeaProjects/notification-service/telegram
