--- a/src/main/resources/pushnotificationSender.properties
+++ b/src/main/resources/pushnotificationSender.properties
@@ -1,1 +1,1 @@
-pushnotification.path=/home/tenjin/Dev/IdeaProjects/notification-service/pushnotification
+message.path=/home/tenjin/Dev/IdeaProjects/notification-service/pushnotification
