--- a/src/main/resources/smsSender.properties
+++ b/src/main/resources/smsSender.properties
@@ -1,1 +1,1 @@
-sns.path=/home/tenjin/Dev/IdeaProjects/notification-service/sms
+message.path=/home/tenjin/Dev/IdeaProjects/notification-service/sms
