--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
     </properties>
     <dependencies>
         <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-jaxrs</artifactId>
+        <version>1.5.6</version>
+    </dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
